# kaajkormo

./: .env.production.example  .gitignore  DEPLOY.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  mise.toml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql  002_clerk_auth_and_social_profiles.sql  003_enhanced_tracking.sql  004_photo_and_resume.sql  005_interviews.sql  006_notifications_and_alerts.sql  007_candidate_ratings.sql  008_swipe_history.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/middleware/: auth.rs
backend/src/models/: application.rs  application_event.rs  candidate.rs  candidate_rating.rs  company.rs  interview.rs  job.rs  job_alert.rs  mod.rs  notification.rs  resume_parse.rs  swipe_history.rs  user.rs
backend/src/routes/: applications.rs  auth.rs  candidates.rs  companies.rs  discover.rs  health.rs  interviews.rs  job_alerts.rs  jobs.rs  mod.rs  notifications.rs  ratings.rs  resume_parser.rs  saved.rs  uploads.rs
backend/src/services/: auth.rs  email.rs  file_upload.rs  mod.rs  notifications.rs  resume_parser.rs
deploy/: kaajkormo.service  nginx-ssl.conf  setup-vps.sh  vps-deploy.sh
frontend/: .env.example  Dockerfile  biome.json  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: ClerkTokenSync.tsx  PostHogIdentify.tsx  PostHogPageview.tsx
frontend/src/lib/: api.ts  auth-components.tsx  auth.ts  hotkeys.ts  posthog.ts  utils.ts
hooks/: pre-commit
(+71 files in other folders)
